--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
     "python.formatting.provider": "autopep8",
     "python.formatting.autopep8Args": [
         "--max-line-length=120"
-    ]
+    ],
+    "python.unitTest.nosetestArgs": [
+        "pytomato"
+    ],
+    "python.unitTest.nosetestsEnabled": true
 }
